<resources>
    <string name="app_name">Java</string>
    <string name="full_name">Full Name:</string>
    <string name="ikechi_ucheagwu">Ikechi Ucheagwu</string>
    <string name="slack_username">Slack Username:</string>
    <string name="iykeafrica">iykeafrica</string>
    <string name="startng_email">StartNG Email:</string>
    <string name="ikechiucheagwu_gmail_com">ikechiucheagwu@gmail.com</string>
    <string name="tracks">Tracks:</string>
    <string name="mobile_java_kotlin_flutter">Mobile (Java, Kotlin, Flutter)</string>
</resources>
